--- a/public/admin.html
+++ b/public/admin.html
@@ -75,7 +75,7 @@ function setAnchor(){
 
 
 
-var baseUrl = 'http://localhost:10000/'
+var baseUrl = 'https://geopardy.onrender.com'
 async function pullMarkers(e){
 
     if(!anchor){
