--- a/public/home.html
+++ b/public/home.html
@@ -74,7 +74,7 @@ function getQueryParms(param){
 }
 
 
-var baseUrl = 'http://localhost:10000/'
+var baseUrl = 'https://geopardy.onrender.com/'
 async function postInfo(e){
 
     var retstring;
