--- a/public/home.html
+++ b/public/home.html
@@ -74,7 +74,7 @@ function getQueryParms(param){
 }
 
 
-var baseUrl = 'https://geopardy.onrender.com/'
+var baseUrl = 'https://naval-honey-twwebtest-d2ee2959.koyeb.app/'
 async function postInfo(e){
 
     var retstring;
