--- a/public/admin.html
+++ b/public/admin.html
@@ -12,6 +12,7 @@
 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
 crossorigin=""></script>
 
+<link rel="stylesheet" href="css/adminstyle.css">
 
 <style>
     #map { height: 700px; }
@@ -20,13 +21,16 @@ crossorigin=""></script>
 
 </head>
 <body>
-    <h1 style="text-align:center;">Results</h1>
+    <h1 style="text-align:center;">Admin Control</h1>
+    <div class="controls">
     <input type="button" id="btnFetch" value="Close">
     <input type="button" id="btnReset" value="Reset">
     <input type="text" id="anchorTxt">
     <input type="button" id="anchorBtn" value="Set">
     <input type="button" id="revealBtn" value="Reveal">
+    </div>
     <p id="win"></p>
+    
 
 
 
