--- a/public/map.html
+++ b/public/map.html
@@ -11,6 +11,7 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
 crossorigin=""></script>
+<link rel="stylesheet" href="css/mapstyle.css">
 
 <style>
     #map { height: 700px; }
@@ -22,7 +23,6 @@ crossorigin=""></script>
     <h1>GeoPardy, brought to you by "Das ist ja noch mehr rng als Schätzfragen"</h1>
     <p id="output"></p>
     <div style="text-align:center;"><input type="button" id="btn" class="btn" value="Submit"></div>
-
 
 
     <div id="map"></div>
