--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="icon" type="image/png" href="favi.png">
     <title>GeoPardy</title>
     <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <link rel="stylesheet" href="css/indexstyle.css">
