--- a/public/mapadmin.html
+++ b/public/mapadmin.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="icon" type="image/png" href="favi.png">
+<link rel="icon" type="image/png" href="images/favi.png">
 <title>Geopardy</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -13,7 +13,7 @@
 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
 crossorigin=""></script>
 
-<link rel="stylesheet" href="css/adminstyle.css">
+<link rel="stylesheet" href="css/mapadminstyle.css">
 
 <style>
     #map { height: 700px; }
@@ -38,7 +38,7 @@ crossorigin=""></script>
     <div id="map"></div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
-<script src="js/adminscript.js"></script>
+<script src="js/mapadminscript.js"></script>
 
 
 </html>
