--- a/public/map.html
+++ b/public/map.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="icon" type="image/png" href="favi.png">
+<link rel="icon" type="image/png" href="images/favi.png">
 <title>Geopardy</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
