Success/Failuer for adding cards

--- a/public/tobbs.html
+++ b/public/tobbs.html
@@ -76,6 +76,8 @@
             </div>
             
             <button onclick="addNewCard()">Abschicken</button>
+            <!-- Success/Failure message paragraph -->
+            <p id="operation-status" class="hidden"></p>
         </div>
     </div>
     
