--- a/public/tobbs.html
+++ b/public/tobbs.html
@@ -3,13 +3,17 @@
 
 <head>
     <link rel="icon" type="image/png" href="images/favi.png">
-    <title>Tobbs - Euro2024 Collection</title>
+    <title>Tobbs - Euro6 Cards</title>
     <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <link rel="stylesheet" href="css/tobbsstyle.css">
 </head>
 
 <body>
-    <h1 id="lol">Scheiß Scholz!</h1>
+    <h1 id="lol">
+        <img src="images/tur.png" alt="Left Image" class="side-image">
+        Scheiß Scholz!
+        <img src="images/bmg.png" alt="Right Image" class="side-image">
+    </h1>
     
     <div class="container">
         <div id="search-section">
@@ -43,7 +47,7 @@
             <h2>Neue Karte anlegen</h2>
             <div>
                 <label for="new-card-id">Karten-ID:</label>
-                <input list="new-card-ids" id="new-card-id" placeholder="Enter card ID">
+                <input list="new-card-ids" id="new-card-id" placeholder="Karten-ID eingeben...">
                 <datalist id="new-card-ids">
                     <!-- Card ID options will be populated dynamically -->
                 </datalist>
