Changed the way results are displayed

--- a/public/tobbs.html
+++ b/public/tobbs.html
@@ -40,6 +40,7 @@
 
             <div>
                 <button onclick="searchCards()">Suchen</button>
+                <p id="tabledesc" class="hidden"></p>
             </div>
         </div>
         
